mem::uninitalized -> mem::zeroed
mem::uninitialized will be deprecated and the future UB'ness of `MaybeUninit::uninitialized` on integers is uncertain.
So I will just use `mem::zeroed` as performance is not a concern here.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache: cargo
 script:
   - cargo test
   - cargo test --release
+  - cargo build --examples --all
+  - cargo build --examples --all --release
 
 branches:
   only:
